--- a/src/assets/css/common_pc.scss
+++ b/src/assets/css/common_pc.scss
@@ -12,7 +12,7 @@ html, body {
 body {
   font-size: 14px;
   color: #5A5E66;
-  font-family: "PingFang SC", "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 
 .comBox {
