--- a/src/assets/scss/_extends.scss
+++ b/src/assets/scss/_extends.scss
@@ -30,6 +30,8 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  word-wrap:break-word;
+  word-break:break-all;
 }
 
 /* item 底部1px */
